# python-noob

./: .gitignore  pyproject.toml
.circleci/: config.yml
test/collections/: dict_test.py
test/language/: destructuring_test.py  generator_test.py  string_formatting_test.py
