[tool.poetry]
name = "python-noob"
version = "0.1.0"
description = "My Python knowledge-base, with assertions to prove accuracy"
authors = ["kvimber <kvimber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
